<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="srdjan.usorac.chatapplication.MessageActivity">

    <Button
        android:id="@+id/logout_from_chat"
        android:layout_width="139dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/log_out" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="410dp"
            android:hint="@string/message_text"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="405dp"
            android:layout_marginLeft="20dp"
            android:text="@string/send"
            android:id="@+id/send"/>

    </LinearLayout>


</LinearLayout>
