<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="srdjan.usorac.chatapplication.ContactsActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "@string/my_chat_list"
        android:textSize="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/refresh"
            android:layout_width="150dp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/refresh"/>

        <Button
            android:id="@+id/logout"
            android:layout_width="150dp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/log_out"
            android:layout_alignParentRight="true" />


    </RelativeLayout>



    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <ListView
            android:id="@+id/contacts_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


        </ListView>



    </RelativeLayout>

</LinearLayout>